expected/main/gens/primNZBitFromLiteral-neg-64.err
ERROR: "actual/main/gens/primNZBitFromLiteral-neg-64.lc", line 3
external nzW_2  {primNZBitFromLiteral  Word  2} :: ProxyNat 1 -> NZBit 2
         ^
Generator argument 1 (Word) does not have expected kind (nat)

ERROR: "actual/main/gens/primNZBitFromLiteral-neg-64.lc", line 2
entrypoint nzW_2
^
"nzW_2" is not in scope

ERROR: Aborting after 2 previously reported errors

